--- a/_posts/2021-07-18-first.md
+++ b/_posts/2021-07-18-first.md
@@ -35,5 +35,5 @@ title: "C언어 첫 번째 시간"
 ### 8진법
 0\~7의 정수로 표시하는 방법
 ### 16진법
-0\~9의 정수와 A\~F를 사용하여 표시하는 방법
-<img src="" width="300" height="200"> 
+0\~9의 정수와 A\~F를 사용하여 표시하는 방법   
+<img src="https://github.com/thdudgus/thdudgus.github.io/issues/1#issue-949435301" width="300" height="200"> 
